# arch-systems-portal

./: .agents  .aider.chat.history.md  .aider.input.history  .api.pid  .claude  .cursor  .cursorrules  .dockerignore  .env.example  .env.tools.example  .eslintignore  .gitignore  .mcp.json  .portal.pid  .portal.start  .prettierignore  .qoder  .repowise  .repowise-workspace  .repowise-workspace.yaml  .sense  .syncpackrc  AGENTS.md  ARCH-MK2_COMPLIANCE_EXECUTIVE_SUMMARY.md  ARCH-MK2_COMPLIANCE_REPORT.md  ARCHITECTURE.md  ARCH_MK2_IMPLEMENTATION_BLUEPRINT.md  BACKEND_AUDIT.md  CACHE_COMPONENTS_AUDIT.md  CLAUDE.md  DEPLOYMENT.md  GAP_REPORT_NEXTJS_OPTIMIZATION.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN_NEXTJS16_REDIS.md  ORIGINAL_REQUEST.md  README.md  RUNTIME_CHECK_COMMANDS.md  SOUL.md  acc.db  (+30 more)
.agentic-tools-mcp/: checksums.json  repowise-workspace.yaml
.agents/: AGENTS.md  BRIEFING.md  ORIGINAL_REQUEST.md  README.md
.aistack/: docker-compose.ai.yml
.aistack/tools/memex/: .coverage  .gitignore  AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml.example  coverage.json  pyproject.toml  server.json  socket.yml
.aistack/tools/memex/.github/: dependabot.yml
.aistack/tools/memex/.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  metrics-snapshot.yml  publish.yml  scorecard.yml
.aistack/tools/memex/docker/: docker-compose.yml
.aistack/tools/memex/memex/: __init__.py  __main__.py  cli.py  cli_doctor_tracing.py  cli_graph.py  cli_graph_template.py  cli_review.py  config.py
.aistack/tools/memex/memex-vscode/: .vscodeignore  README.md  esbuild.js  package.json  tsconfig.json
.aistack/tools/memex/memex-vscode/src/: extension.ts  graphPanel.ts  memexClient.ts  statusBar.ts  types.ts
.aistack/tools/memex/memex-vscode/webview/: graph.css  graph.html  graph.js
.aistack/tools/memex/memex/extractor/: lockfile.py  treesitter.py
.aistack/tools/memex/memex/graph/: archive.py  client.py  cluster.py  cluster_overrides.py  cluster_runner.py  cluster_summary.py  confidence.py  decay.py  otel.py  schema.py  stats.py  telemetry.py  writer.py
.aistack/tools/memex/memex/mcp_server/: conflict.py  formatter.py  http.py  queries.py  reranker.py  server.py  tools_explain.py  tools_impact.py  tools_read.py  tools_write.py  tracing.py
.aistack/tools/memex/memex/memory_tool/: __init__.py  http.py  projection.py  safety.py  scratch.py  serializer.py  server.py
.aistack/tools/memex/memex/synthesizer/: commit.py
.aistack/tools/memex/memex/watcher/: __init__.py  commit_poller.py  daemon.py  event_router.py  events.py  fs_observer.py  git_hook.py  handlers.py  health.py  registry.py
.aistack/tools/memex/npm/: .npmignore  README.md  package.json
.aistack/tools/memex/tests/: conftest.py  test_archive.py  test_bidirectional.py  test_cli.py  test_cli_graph.py  test_cli_review.py  test_cluster.py  test_cluster_overrides.py  test_cluster_runner.py  test_cluster_summary.py  test_commit_poller.py  test_confidence.py  test_config.py  test_conflict.py  test_context_briefing.py  test_corroboration.py  test_decay.py  test_event_router.py  test_explain_change.py  test_extractor.py  test_formatter.py  test_fs_observer.py  test_git_hook.py  test_graph_client.py  test_graph_writer.py  test_handlers.py  test_health.py  test_http_transport.py  test_lockfile.py  test_mcp_queries.py  test_mcp_queries_integration.py  test_mcp_server.py  test_mcp_tools.py  test_memory_tool.py  test_memory_tool_http.py  test_memory_tool_safety.py  test_otel.py  test_phase1_e2e.py  test_phase2_e2e.py  test_pipeline_e2e.py  (+13 more)
.claude/: settings.local.json
.cursor/: hooks.json  knowledge  mcp-servers.json
.devcontainer/: devcontainer.json
.devin/: config.local.json
.github/: copilot-instructions.md  dependabot.yml
.husky/: post-checkout  post-commit  post-merge  pre-commit  pre-push
.kilo/: kilo.json
.kilocode/: task_history.json
.kiro/: GIT_HOOKS.md  QUICK_REFERENCE.md  README.md  requirements.md
.qoder/: settings.json  settings.local.json
.serena/: project.yml
Codebase-maps/: README.md  api-routes.md  architectural-graph-matrix-and-tooling.md  caching-layers.md  client-server-boundaries.md  data-flow-and-api-map.md  dataflow-pipelines.md  monorepo-structure-map.md  packages-and-dependencies-map.md  workspace-packages.md
ai-backends/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
apps/ai-agents/: README.md  pyproject.toml
apps/ai-agents/src/: main.py
config/: nginx.conf
docs/: AGENTS-REFERENCE.md  AGENT_TRACER.md  AMCA-RUNBOOK.md  ARCHITECTURE.md  AUDIT_REPORT.md  BACKEND_AUDIT.md  CODEBASE_LSP_MAP.md  DEPLOYMENT.md  GITHUB_REPOS_REFERENCE.md  IMPLEMENTATION_GUIDE.md  NESTJS_TO_NEXTJS_MIGRATION.md  caching-strategy-research.md  component-consolidation-audit.md  design-vercel-consolidation-plan.md  design-vercel-rebrand-plan.md  dev-sh-test-checklist.md  foundational-architecture-gap-analysis.md  migration-analysis.md  redis-caching-redesign.md  scalability-architecture-reference.md  type-error-catalog.md
e2e/: auth-login-flow.spec.ts
openspec/: automated-audit-reporter-outline.md  automated-audit-reporter.md  config.yaml
scripts/: README.md  agency-loop.sh  agent-runner.ts  ai.sh  auto-skill-miner.py  backup-db.sh  copy-assets.sh  delegate-agent.sh  deploy-production.sh  deploy.sh  dev-cache.sh  dev-deploy-login.sh  dev.sh  export-roadmap.mjs  generate-api-env.mjs  heal-daemon.sh  inject-hermes-keys.py  launch-ai-nextjs.sh  live-deployment.sh  lsp-router.sh  mcp-manager.sh  memory-daemon.sh  open-login.sh  open-monitoring-terminals.sh  portal-watchdog.sh  pre-flight.sh  provider-router.sh  reconcile.sh  registry.sh  run-alignment.sh  shutdown.sh  (+3 more)
support/rust-support/bindings/node-napi/: Cargo.toml  build.rs  package.json
support/rust-support/bindings/node-napi/src/: lib.rs
support/rust-support/cache-engine/: Cargo.toml
support/rust-support/cache-engine/src/: l2_redis.rs  lib.rs
support/rust-support/logic-engine/: Cargo.toml
support/rust-support/logic-engine/src/: lib.rs  zen.rs
(+2279 files in other folders)
