[package]
name = "cache-engine"
version = "0.3.0"
edition = "2021"

[features]
default = []
l2-redis = ["redis"]

[dependencies]
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
