[package]
name = "bindings-node-napi"
version = "0.1.0"
edition = "2021"

[dependencies]
cache-engine = { path = "../../cache-engine" }
logic-engine = { path = "../../logic-engine" }
napi = { version = "2.4", features = ["napi6", "tokio_rt"] }
napi-derive = "2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }